welcome.lessons.welcome.bat.bool2.AnswerCell.scala.error
answerCell:6: error: ';' expected but 'else' found.
} else { 
  ^answerCell:11: error: Unmatched closing brace '}' ignored here
 }
 ^